--- a/html/homePage.html
+++ b/html/homePage.html
@@ -189,7 +189,7 @@
             },
             
             mounted(){
-                axios.get('g2_fetchArticleAllConnect.php').then((res)=>{
+                axios.get('php/articleAllConnect.php').then((res)=>{
                     // 全部文章
                     this.discusArtAll = res.data;
                     
