--- a/html/articlePage.html
+++ b/html/articlePage.html
@@ -70,7 +70,7 @@
                         <div class="shareBar">
                             <div class="shareComment">
                                 <div class="like mainColor deepColor">
-                                    <div class="pic" @click="discusArt.likes+=1">
+                                    <div class="pic" @click="toggleLikes">
                                         <img src="assets/image/all_like.png" alt="">
                                     </div>
                                     <span class="small">
@@ -204,6 +204,7 @@
                 src:'assets/image/',
                 // 同步留言內容
                 MyComment:'',
+                click:false,
             },
             //新增監聽器
             filters: {
@@ -253,6 +254,34 @@
                         }).catch((err)=>{
                             console.log(err)
                         });
+                },
+                toggleLikes(){
+                    if(!this.click){
+                        this.discusArtAll[0].likes += 1;
+                        this.click = !this.click;
+                    }else{
+                        this.discusArtAll[0].likes -= 1;
+                        this.click = !this.click;
+                    }
+                    // 避免抓到ajax的this
+                    let thisVue = this;
+                        // console.log(thisVue.MyComment);
+                        $.ajax({
+                            type: 'POST',
+                            url: 'php/articlePageLikeSend.php',
+                            data: {
+                                Likes:JSON.stringify(`${thisVue.discusArtAll[0].likes}`),
+                                ArticleNo:JSON.stringify(`${thisVue.discusArtAll[0].articleNo}`),
+                            },
+                            success: function(data) {
+                                // console.log(data);
+                                console.log("成功了嗎?");
+                                // console.log(this.MyComment);
+                            },
+                            error: function() {
+                                console.log('ajax error');
+                            }
+                    });
                 },
             },
 
