藝廊大門+使用介紹

--- a/html/galleryDoor.html
+++ b/html/galleryDoor.html
@@ -27,6 +27,14 @@
 
     <!-- 伶_藝廊大門_main區域 -->
     <main class="galleryDoorMain">
+        <div class="operate bounce">
+            <p>點擊大門進入藝廊</p>
+            <div class="arrow">
+                <div class="curve">
+                    <div class="point"></div>
+                </div>
+            </div>
+        </div>
         <div class="stage">
             <div class="size">
                 <div class="ring">
