--- a/html/backProduct.html
+++ b/html/backProduct.html
@@ -5,17 +5,42 @@
                     <li v-for = 'title in titles'>{{title}}</li>
                     <li></li>
                 </ul>
-                <ul v-for='(member,key) in members' 
+                <ul v-for='(product,key) in products' 
                 class="memberList">            
-                    <li>{{member.prodNo}}</li>
-                    <li>{{member.prodClass}}</li>
-                    <li>{{member.productName}}</li>
-                    <li>{{member.commitStatus}}</li>
-                    <li>{{member.adStatus}}</li>
-                    <li>{{member.saleStatus}}</li> 
-                    <li>{{member.memNo}}</li>   
-                    <li>編輯與查看</li>
+                    <li>{{product.prodNo}}</li>
+                    <li>{{product.prodClass}}</li>
+                    <li>{{product.productName}}</li>
+                    <li>{{product.auditState}}</li>
+                    <li>{{product.adStatus}}</li>
+                    <li>{{product.saleStatus}}</li> 
+                    <li>{{product.memNo}}</li>   
+                    <li v-on:click="openLightBox(key)">編輯與查看</li>
                 </ul>
+                <section class="backLightBox productLigthtBox displayNone" id="productLigthtBox">
+                    <i class="fas fa-times" v-on:click="backCloseLight">x</i>
+                    <ul>            
+                        <li>{{titles[0]}} {{lightIndex.prodNo}}</li>
+                        <li>{{titles[1]}} {{lightIndex.prodClass}}</li>
+                        <li>{{titles[2]}} {{lightIndex.productName}}</li>
+                        <li>{{titles[3]}}</li>
+                        <select v-model="changedStatus">                                        
+                            <option :value="status.name" v-for="status in statusList" >{{status.name}}</option>                                    
+                        </select>
+                        <li>{{titles[4]}} {{lightIndex.adStatus}}</li>
+                        <li>{{titles[5]}} {{lightIndex.saleStatus}}</li> 
+                        <select v-model="changedSaleStatus">                                        
+                            <option :value="sale.name" v-for="sale in saleList" >{{sale.name}}</option>                                    
+                        </select>
+                        <li>{{titles[6]}} {{lightIndex.memNo}}</li>
+                    </ul>
+                    <div class="image">
+                        <img v-bind:src="certification" alt="">   
+                    </div>
+                    <div class="image" v-for='(image) in indexImage' >
+                        <img v-bind:src="image" alt="">   
+                    </div>
+                    <button v-on:click="confirmChange">確認</button>
+                </section>
             </div>
         </section>
     </section>
@@ -24,17 +49,101 @@
             el: '#app',
             data: {
                 titles: ['商品編號',  '商品類別', '商品名稱','審核狀態','廣告狀態','販售狀態','上架會員編號','', ],
-                members:[{
-                    'prodNo':'001',
-                    'prodClass':'雕塑品',
-                    'productName':'chin masterpiece',
-                    'commitStatus':'通過',
-                    'adStatus':'無',
-                    'saleStatus':"非賣品",
-                    'memNo':'000234',
-                },],
+                table:'com',
+                products:[],
+                productLigthtBox : document.querySelector("#productLigthtBox"),
+                lightIndex:[],
+                certification:[],
+                prodImage:[],
+                indexImage:[],
+                statusList:[
+                {name: "審核中"},
+                {name: "通過"},
+                {name: "未通過"}
+                ],
+                saleList:[
+                {name: "未上架"},
+                {name: "販售中"},
+                {name: "已販售"}
+                ],
+                changedStatus: '',
+                changedSaleStatus:'',
             },
-            methods: {},
+            mounted(){
+                let thisVue = this;
+                $.ajax({
+                    type: 'POST',
+                    url: 'php/selectAll.php',
+                    data: {
+                        table:JSON.stringify(thisVue.table),
+                    },
+                    success: function(data) {
+                        thisVue.products = data;
+                        // console.log(thisVue.products);
+                    },
+                    error: function() {
+                        console.log('ajax error');
+                    }
+                }),
+                axios.get('php/backImageSelect.php').then((res)=>{
+                    this.prodImage = res.data;
+                }).catch((err)=>{
+                    console.log(err)
+                })
+            },
+            methods: {
+                openLightBox:function(key){
+                    productLigthtBox.classList.toggle("displayNone"); 
+                    this.lightIndex = this.products[key];
+                    if(this.lightIndex.auditState=="審核中"){
+                        this.changedStatus = this.statusList[0].name;
+                    }else if(this.lightIndex.auditState=="通過"){
+                        this.changedStatus = this.statusList[1].name;
+                    }else{
+                        this.changedStatus = this.statusList[2].name;
+                    }
+                    // 販售狀態
+                    if(this.lightIndex.saleStatus=="未上架"){
+                        this.changedSaleStatus = this.saleList[0].name;
+                    }else if(this.lightIndex.saleStatus=="販售中"){
+                        this.changedSaleStatus = this.saleList[1].name;
+                    }else{
+                        this.changedSaleStatus = this.saleList[2].name;
+                    }
+                    this.certification = "assets/image/commodity/"+this.lightIndex.certification;
+                    this.indexImage=[];
+                    for(let i=0; i<this.prodImage.length; i++){
+                        if(key+1 ==this.prodImage[i].prodNo){
+                            console.log(this.prodImage[i].prodNo);
+                            console.log(this.prodImage[i].img);
+                            this.indexImage.push("assets/image/commodity/"+this.prodImage[i].img);
+                            console.log("斷點");
+                        }
+                    }
+                },
+                backCloseLight:function(){
+                    productLigthtBox.classList.toggle("displayNone"); 
+                },
+                confirmChange:function(){
+                    productLigthtBox.classList.toggle("displayNone");
+                    if(this.changedStatus=="審核中"){
+                        this.lightIndex.auditState = "審核中";
+                    }else if(this.changedStatus=="通過"){
+                        this.lightIndex.auditState = "通過";
+                    }else if(this.changedStatus=="未通過"){
+                        this.lightIndex.auditState = "未通過";
+                    };
+                    // 販售狀態
+                    if(this.changedSaleStatus=="未上架"){
+                        this.lightIndex.saleStatus = "未上架";
+                    }else if(this.changedSaleStatus=="販售中"){
+                        this.lightIndex.saleStatus = "販售中";
+                    }else if(this.changedSaleStatus=="已販售"){
+                        this.lightIndex.saleStatus = "已販售";
+                    };
+                let thisVue = this;
+                },
+            },
             computed: {},
             watch: {},
         });
