--- a/galleryAll/gallery/gallery02.html
+++ b/galleryAll/gallery/gallery02.html
@@ -27,6 +27,61 @@
             <a href="productSingle.html" class="goPrice round">前往出價</a>
         </div>
     </section>
+    <section class="lightBox displayNone" id="lightBoxP4">
+        <i class="closeLightBox fas fa-times" id="closeLightBoxP4">x</i>
+        <div class="photoBox">
+        </div>
+        <div class="lightBoxContent">
+            <h3>哈哈哈哈哈</h3>
+            <p>創作者:噴火龍</p>
+            <p>藝術家企圖透過這件作品表達一種身處聲音風景的想像。在環境中，每個對話、每個聲音都有其獨特的頻率，在人與人對話或人與自然環境互動的同時也被這些獨特的頻率穿透，因此藝術家創造了一種可以讓身體接收穿越的視聽感受。</p>
+            <a href="productSingle.html" class="goPrice round">前往出價</a>
+        </div>
+    </section>
+    <section class="lightBox displayNone" id="lightBoxP5">
+        <i class="closeLightBox fas fa-times" id="closeLightBoxP5">x</i>
+        <div class="photoBox">
+        </div>
+        <div class="lightBoxContent">
+            <h3>哦哦哦哦</h3>
+            <p>創作者:噴火龍</p>
+            <p>藝術家企圖透過這件作品表達一種身處聲音風景的想像。在環境中，每個對話、每個聲音都有其獨特的頻率，在人與人對話或人與自然環境互動的同時也被這些獨特的頻率穿透，因此藝術家創造了一種可以讓身體接收穿越的視聽感受。</p>
+            <a href="productSingle.html" class="goPrice round">前往出價</a>
+        </div>
+    </section>
+    <section class="lightBox displayNone" id="lightBoxPumpkin">
+        <i class="closeLightBox fas fa-times" id="closeLightBoxPumpkin">x</i>
+        <div class="photoBox">
+        </div>
+        <div class="lightBoxContent">
+            <h3>微笑南瓜</h3>
+            <p>創作者:噴火龍</p>
+            <p>藝術家企圖透過這件作品表達一種身處聲音風景的想像。在環境中，每個對話、每個聲音都有其獨特的頻率，在人與人對話或人與自然環境互動的同時也被這些獨特的頻率穿透，因此藝術家創造了一種可以讓身體接收穿越的視聽感受。</p>
+            <a href="productSingle.html" class="goPrice round">前往出價</a>
+        </div>
+    </section>
+    <section class="lightBox displayNone" id="lightBoxPumpkin02">
+        <i class="closeLightBox fas fa-times" id="closeLightBoxPumpkin02">x</i>
+        <div class="photoBox">
+        </div>
+        <div class="lightBoxContent">
+            <h3>生氣南瓜</h3>
+            <p>創作者:噴火龍</p>
+            <p>藝術家企圖透過這件作品表達一種身處聲音風景的想像。在環境中，每個對話、每個聲音都有其獨特的頻率，在人與人對話或人與自然環境互動的同時也被這些獨特的頻率穿透，因此藝術家創造了一種可以讓身體接收穿越的視聽感受。</p>
+            <a href="productSingle.html" class="goPrice round">前往出價</a>
+        </div>
+    </section>
+    <section class="lightBox displayNone" id="lightBoxMonkey">
+        <i class="closeLightBox fas fa-times" id="closeLightBoxMonkey">x</i>
+        <div class="photoBox">
+        </div>
+        <div class="lightBoxContent">
+            <h3>莫名其妙猴</h3>
+            <p>創作者:噴火龍</p>
+            <p>藝術家企圖透過這件作品表達一種身處聲音風景的想像。在環境中，每個對話、每個聲音都有其獨特的頻率，在人與人對話或人與自然環境互動的同時也被這些獨特的頻率穿透，因此藝術家創造了一種可以讓身體接收穿越的視聽感受。</p>
+            <a href="productSingle.html" class="goPrice round">前往出價</a>
+        </div>
+    </section>
 </body>
 </html>
 
