--- a/html/3dSurroundView.html
+++ b/html/3dSurroundView.html
@@ -31,6 +31,19 @@
     <title>會員中心</title>
     <!-- 頁籤icon -->
     <link rel="icon" href="assets/icon/a_icon.ico" type="art together icon">
+
+    <!-- 登入  -->
+    <script src="js/loginCheck.js"></script>
+    <script>
+        window.addEventListener('load', function() {
+            loginCheck(true);
+        })
+    </script>
+    <!-- 登入ＥＮＤ  -->
+    <!-- 引入vue -->
+    <script src="js/vue/vue.js"></script>
+    <!-- 引入axios -->
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
 
 <body>
@@ -167,23 +180,23 @@
         </section>
         <main>
             <section class="accountManagement_information">
-                <p class="information">會員編號：<span>0123456（pk）</span></p>
-                <p class="information">會員暱稱：<span class="showChangeValue" name="1">text</span> <input class="changeValue" value="text" nmae="1" placeholder="請輸入您的會員暱稱"></input>
+                <p class="information">會員編號：<span id="memNo3DPage">0123456（pk）</span></p>
+                <p class="information">會員暱稱：<span id="memNickName3DPage" class="showChangeValue" name="1">text</span> <input class="changeValue" value="text" name="1" placeholder="請輸入您的會員暱稱"></input>
                 </p>
-                <p class="information">會員帳號：<span>milktea</span></p>
-                <p class="information">會員密碼：<span>20190119</span></p>
+                <p class="information">會員帳號：<span id="memId3DPage">milktea</span></p>
+                <p class="information">會員密碼：<span id="memPwd3DPage">20190119</span></p>
                 </p>
-                <p class="information">姓名：<span class="showChangeValue" name="2">text</span><input class="changeValue" value="text" nmae="2" placeholder="請輸入您的姓名"></input>
+                <p class="information">姓名：<span id="memName3DPage" class="showChangeValue" name="2">text</span><input class="changeValue" value="text" name="2" placeholder="請輸入您的姓名"></input>
                 </p>
-                <p class="information">信箱：<span class="showChangeValue" name="3">text</span><input class="changeValue" value="text" nmae="3" placeholder="請輸入您的信箱"></input>
+                <p class="information">信箱：<span id="email3DPage" class="showChangeValue" name="3">text</span><input class="changeValue" value="text" name="3" placeholder="請輸入您的信箱"></input>
                 </p>
-                <p class="information">電話：<span class="showChangeValue" name="4">text</span><input class="changeValue" value="varchar" nmae="4" placeholder="請輸入您的電話"></input>
+                <p class="information">電話：<span id="phone3DPage" class="showChangeValue" name="4">text</span><input class="changeValue" value="varchar" name="4" placeholder="請輸入您的電話"></input>
                 </p>
-                <p class="information">地址：<span class="showChangeValue" name="5">text</span><input class="changeValue" value="text" nmae="5" placeholder="請輸入您的地址"></input>
+                <p class="information">地址：<span id="address3DPage" class="showChangeValue" name="5">text</span><input class="changeValue" value="text" name="5" placeholder="請輸入您的地址"></input>
                 </p>
-                <p class="information">信用卡：<span class="showChangeValue" name="6">text</span><input class="changeValue" value="int" nmae="6" placeholder="請輸入您的信用卡"></input>
+                <p class="information">信用卡：<span id="creditCard3DPage" class="showChangeValue" name="6">text</span><input class="changeValue" value="int" name="6" placeholder="請輸入您的信用卡"></input>
                 </p>
-                <p class="information">註冊日期：<span>20220224</span>
+                <p class="information">註冊日期：<span id="enrollDate3DPage">20220224</span>
                 </p>
             </section>
             <section class="profilePicture">
